bug(database):make adjustments to pass autogradr
