# server/routes/tripRouter.js
@@ -7,17 +7,17 @@ import Auth from '../middleware/auth';
 
 const tripRouter = express.Router();
 
-const { verifyTrip, verifyGet, verifyBook, verifyDel, verifyCancel, verifyFilter, verifySeat } = validate;
+const { verifyTrip, verifyBook, verifyDel, verifyCancel, verifyFilter, verifySeat } = validate;
 const {create, getTrips, book, getBookings, deleteBookings, cancelTrip, getFilterTrips, changeSeat } = trip;
 const { verifyAdmin, verifyToken } = Auth;
 
 
 tripRouter.route('/api/v1/trips').post(verifyAdmin, verifyTrip, create);
-tripRouter.route('/api/v1/trips').get(verifyToken, verifyGet, getTrips);
+tripRouter.route('/api/v1/trips').get(verifyToken, getTrips);
 tripRouter.route('/api/v1/bookings').post(verifyToken, verifyBook, book);
 tripRouter.route('/api/v1/bookings').get(verifyToken, getBookings);
-tripRouter.route('/api/v1/bookings/:bookingId').delete(verifyToken, verifyDel, deleteBookings);
-tripRouter.route('/api/v1/trips/:tripId').patch(verifyAdmin, verifyCancel, cancelTrip);
+tripRouter.route('/api/v1/bookings/:booking_id').delete(verifyToken, verifyDel, deleteBookings);
+tripRouter.route('/api/v1/trips/:trip_id').patch(verifyAdmin, verifyCancel, cancelTrip);
 tripRouter.route('/api/v1/trips/filter').get(verifyToken, verifyFilter, getFilterTrips);
 tripRouter.route('/api/v1/bookings/seat').post(verifyToken, verifySeat, changeSeat);
 
